# gravity-reth

./: Cargo.toml  Makefile  README.md  deny.toml  typos.toml
.config/: nextest.toml  zepter.yaml
.github/scripts/: codspeed-build.sh
.github/workflows/: bench.yml  book.yml  claude-security-review.yml  compact.yml  e2e.yml  hive.yml  integration.yml  lint-actions.yml  lint.yml  unit.yml  windows.yml
crates/chain-state/: Cargo.toml
crates/chain-state/src/: in_memory.rs  memory_overlay.rs  test_utils.rs
crates/chainspec/src/: api.rs  constants.rs  gravity.rs  lib.rs  spec.rs
crates/cli/commands/: Cargo.toml
crates/cli/commands/src/: common.rs  node.rs
crates/cli/util/src/: sigsegv_handler.rs
crates/config/src/: config.rs
crates/consensus/common/src/: validation.rs
crates/e2e-test-utils/src/: lib.rs  setup_import.rs  transaction.rs
crates/e2e-test-utils/tests/e2e-testsuite/: main.rs
crates/engine/primitives/src/: config.rs
crates/engine/tree/: Cargo.toml
crates/engine/tree/src/: lib.rs  metrics.rs  persistence.rs  recovery.rs
crates/era-downloader/src/: fs.rs
crates/era-utils/tests/it/: history.rs
crates/ethereum/cli/src/: interface.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: debug_ext.rs  lib.rs  parallel_execute.rs  test_utils.rs
crates/ethereum/evm/tests/: execute.rs
crates/ethereum/node/: Cargo.toml
crates/ethereum/node/src/: lib.rs  node.rs
crates/ethereum/reth/: Cargo.toml
crates/evm/evm/src/: either.rs  execute.rs  lib.rs  noop.rs  parallel_execute.rs
crates/evm/src/: state.rs
crates/gravity-precompiles/: Cargo.toml
crates/gravity-precompiles/src/: lib.rs  randomness_by_height.rs
crates/gravity-primitives/: Cargo.toml
crates/gravity-primitives/src/: config.rs  lib.rs
crates/gravity-storage/: Cargo.toml
crates/gravity-storage/src/: lib.rs
crates/gravity-storage/src/block_view_storage/: mod.rs
crates/net/discv4/src/: lib.rs
crates/net/nat/src/: lib.rs
crates/net/network/src/: manager.rs
crates/node/builder/: Cargo.toml
crates/node/core/: Cargo.toml
crates/node/core/src/: node_config.rs
crates/node/metrics/src/: recorder.rs
crates/optimism/chainspec/src/: lib.rs
crates/optimism/cli/: Cargo.toml
crates/optimism/evm/src/: lib.rs
crates/optimism/reth/: Cargo.toml
crates/optimism/txpool/src/: validator.rs
crates/payload/builder-primitives/src/: lib.rs
crates/pipe-exec-layer-ext-v2/: Cargo.toml
crates/pipe-exec-layer-ext-v2/event-bus/: Cargo.toml
crates/pipe-exec-layer-ext-v2/event-bus/src/: lib.rs
crates/pipe-exec-layer-ext-v2/execute/: Cargo.toml  gravity.json  gravity_hardfork.json
crates/pipe-exec-layer-ext-v2/execute/benches/: bls_pop_verify_bench.rs
crates/pipe-exec-layer-ext-v2/execute/src/: bls_precompile.rs  channel.rs  eip_2935.rs  lib.rs  metrics.rs  mint_precompile.rs  randomness_precompile.rs  tx_filter.rs
crates/pipe-exec-layer-ext-v2/execute/src/onchain_config/: base.rs  consensus_config.rs  dkg.rs  epoch.rs  errors.rs  jwk_consensus_config.rs  jwk_oracle.rs  metadata_txn.rs  mod.rs  observed_jwk.rs  oracle_state.rs  oracle_task_helpers.rs  performance.rs  types.rs  validator_set.rs
crates/pipe-exec-layer-ext-v2/execute/tests/: HARDFORK_TESTING.md  gravity_bls_precompile_test.rs  gravity_eip2935_test.rs  gravity_eip7702_test.rs  gravity_genesis_test.rs  gravity_hardfork_test.rs  gravity_pipe_panic_smoke.rs  gravity_pipe_test.rs  hardfork_test_helpers.rs  mainnet_replay.rs  pipe_test.rs  wipe_recreate_e2e.rs
crates/pipe-exec-layer-ext-v2/relayer/: Cargo.toml  README.md
crates/pipe-exec-layer-ext-v2/relayer/examples/: new_usage.rs
crates/pipe-exec-layer-ext-v2/relayer/src/: blockchain_source.rs  data_source.rs  eth_client.rs  factory.rs  lib.rs  manager.rs  oracle_manager.rs  parser.rs  persistence.rs  relayer.rs  uri_parser.rs
crates/pipe-exec-layer-ext-v2/src/: channel.rs  lib.rs  metrics.rs
crates/pipe-exec-layer-ext-v2/tests/: pipe_test.rs
crates/primitives-traits/src/: lib.rs  storage.rs
crates/ress/provider/src/: lib.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-api/src/: debug.rs
crates/rpc/rpc-builder/src/: config.rs  lib.rs
crates/rpc/rpc-e2e-tests/src/: lib.rs
crates/rpc/rpc-eth-api/src/: core.rs
crates/rpc/rpc-eth-types/src/: pending_block.rs
crates/rpc/rpc/src/: debug.rs  lib.rs
crates/stages/api/: Cargo.toml
crates/stages/api/src/: stage.rs  test_utils.rs
crates/stages/stages/: Cargo.toml
crates/stages/stages/benches/: criterion.rs
crates/storage/db/: Cargo.toml
crates/storage/db-common/: Cargo.toml
crates/storage/db/benches/: hash_keys.rs
crates/storage/db/src/: database.rs  generic.rs  lib.rs  metrics.rs  rocksdb.rs  version.rs
crates/storage/db/src/implementation/: mod.rs
crates/storage/db/src/implementation/mdbx/: cursor.rs  mod.rs  parallel_ro_tx.rs  parallel_tx.rs  tx.rs
crates/storage/db/src/implementation/rocksdb/: cursor.rs  mod.rs  tx.rs
crates/storage/libmdbx-rs/: Cargo.toml
crates/storage/provider/: Cargo.toml
crates/storage/storage-api/: Cargo.toml
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/src/: config.rs  error.rs  lib.rs  maintain.rs  metrics.rs
crates/trie/common/: Cargo.toml
crates/trie/db/: Cargo.toml
crates/trie/parallel/: Cargo.toml
docs/: README.md  security-fix-checklist.md
docs/benchmark/: gravity-reth-063025.md
docs/greth/: greth.md
docs/plans/: 2026-02-23-greth-critical-fixes-design.md  2026-02-23-greth-high-fixes-design.md  2026-02-23-greth-medium-fixes-design.md  2026-02-27-greth-high-fixes-design.md  2026-02-27-greth-low-fixes-design.md  2026-02-27-greth-medium-fixes-design.md  2026-03-05-greth-critical-high-fixes-design.md  2026-03-05-greth-low-fixes-design.md  2026-03-05-greth-medium-fixes-design.md
docs/security/: 2026-02-23-security-audit-report.md  2026-03-05-security-audit-report.md
etc/grafana/dashboards/: greth-performance.json
examples/custom-beacon-withdrawals/src/: main.rs
examples/db-access/src/: main.rs
src/: lib.rs
testing/ef-tests/: Cargo.toml
testing/ef-tests/src/: lib.rs
(+166 files in other folders)
