[package]
name = "reth-pipe-exec-layer-ext-v2"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "pipeline execution layer extension"

[lints]
workspace = true

[dependencies]
gravity-api-types = { package = "api-types", git = "https://github.com/Galxe/gravity-aptos", rev = "6e6c555" }
reth-pipe-exec-layer-event-bus.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-evm-ethereum.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-chain-state.workspace = true
reth-ethereum-primitives.workspace = true
reth-trie.workspace = true
reth-trie-parallel.workspace = true
reth-provider.workspace = true
reth-rpc-eth-api.workspace = true
revm-primitives.workspace = true
gravity-storage.workspace = true
gravity-primitives.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
tokio.workspace = true
rayon.workspace = true

# ethereum
revm.workspace = true

# misc
tracing.workspace = true
reth-metrics.workspace = true
metrics.workspace = true
serde_json.workspace = true
once_cell.workspace = true
reth-pipe-exec-layer-relayer.workspace = true

# crypto and serialization for gravity-aptos validator_info
bcs = "0.1"
serde.workspace = true

[dev-dependencies]
reth-engine-primitives.workspace = true
reth-cli.workspace = true
reth-cli-commands.workspace = true
reth-cli-runner.workspace = true
reth-node-ethereum.workspace = true
reth-node-builder.workspace = true
reth-provider.workspace = true
reth-ethereum-cli.workspace = true
reth-revm.workspace = true
reth-db.workspace = true
reth-node-api.workspace = true
reth-tracing.workspace = true
eyre.workspace = true
rand.workspace = true

[features]
pipe_test = ["reth-provider/pipe_test"]
config-from-env = ["gravity-primitives/config-from-env"]
