[package]
name = "reth-pipe-exec-layer-relayer"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "replayer for pipeline execution layer extension"

[lints]
workspace = true

[dependencies]
gravity-api-types = { package = "api-types", git = "https://github.com/Galxe/gravity-aptos", rev = "a224b0c788d82b68cdc435d593c930c166b5ddcb" }
reth-primitives.workspace = true
reth-tracing.workspace = true
alloy-primitives.workspace = true
once_cell.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

alloy-network.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true

serde_json.workspace = true

[dev-dependencies]
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
