[package]
name = "reth-pipe-exec-layer-relayer"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Oracle data source relayer for Gravity chain"

[lints]
workspace = true

[dependencies]
# Alloy primitives and types
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-network.workspace = true

# Gravity API types (reuse types from gaptos)
gravity-api-types.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
async-trait.workspace = true

# Error handling and utilities
anyhow.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
url.workspace = true

[dev-dependencies]
alloy-sol-types.workspace = true
hex = "0.4"
