[package]
name = "reth-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Database primitives used in reth."

[lints]
workspace = true

[dependencies]
# reth
reth-db-api.workspace = true
reth-fs-util.workspace = true
reth-storage-errors.workspace = true
reth-nippy-jar.workspace = true
reth-tracing.workspace = true
reth-static-file-types.workspace = true

# ethereum
alloy-primitives.workspace = true

# mdbx
reth-libmdbx = { workspace = true, optional = true, features = [
    "return-borrowed",
    "read-tx-timeouts",
] }
eyre = { workspace = true, optional = true }

# rocksdb
rocksdb = { version = "0.24.0", optional = true, default-features = true }

# metrics
metrics = { workspace = true, optional = true }

# misc
page_size = { workspace = true, optional = true }
thiserror.workspace = true
tempfile = { workspace = true, optional = true }
derive_more.workspace = true
sysinfo = { workspace = true, features = ["system"] }
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
# reth libs with arbitrary
reth-primitives-traits = { workspace = true, features = ["reth-codec"] }
reth-prune-types.workspace = true

alloy-primitives = { workspace = true, features = ["getrandom"] }
alloy-consensus.workspace = true

serde_json.workspace = true
tempfile.workspace = true
parking_lot.workspace = true

serde.workspace = true
criterion.workspace = true

arbitrary = { workspace = true, features = ["derive"] }
proptest.workspace = true

assert_matches.workspace = true

[features]
# Always use RocksDB as the default database backend
default = ["rocksdb"]
mdbx = [
    "dep:reth-libmdbx",
    "dep:eyre",
    "dep:page_size",
    "dep:metrics",
    "reth-storage-errors/std",
    "alloy-primitives/std",
]
rocksdb = [
    "dep:rocksdb",
    "dep:eyre",
    "dep:metrics",
    "reth-storage-errors/std",
    "alloy-primitives/std",
    "dep:parking_lot",
]
test-utils = [
    "dep:tempfile",
    "rocksdb",
    "arbitrary",
    "dep:parking_lot",
    "reth-db-api/test-utils",
    "reth-nippy-jar/test-utils",
    "reth-primitives-traits/test-utils",
    "reth-prune-types/test-utils",
]
bench = ["reth-db-api/bench"]
arbitrary = [
    "reth-db-api/arbitrary",
    "alloy-primitives/arbitrary",
    "alloy-consensus/arbitrary",
    "reth-primitives-traits/arbitrary",
    "reth-prune-types/arbitrary",
]
op = ["reth-db-api/op", "reth-primitives-traits/op"]
failpoints = ["fail/failpoints"]
disable-lock = []

[dependencies.fail]
version = "0.5"
optional = true

[[bench]]
name = "hash_keys"
required-features = ["test-utils"]
harness = false

[[bench]]
name = "criterion"
required-features = ["test-utils"]
harness = false

[[bench]]
name = "get"
required-features = ["test-utils"]
harness = false
